--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,1 +1,125 @@
+html, body {
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+  background-color: black;
+  opacity: 0.9;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: seashell;
+}
+/* HEADER */
+header {
+  display: flex;
+  border-bottom: 1px solid seashell;
+  position: fixed;
+  z-index: 1;
+  background-color: black;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 69px;
+}
+.logo img {
+  margin-left: 10px;
+  height: 50px;
+}
+.navigation {
+  margin-right: 10px;
+}
+.navigation span {
+  display: inline-block;
+  margin: 10px;
+}
+/* Top side */
+ .top {
+   background: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg") center center no-repeat;
+   width: 1200px;
+   height: 700px;
+   background-size: cover;
+   display: inline-flex;
+   top: 70px;
+   align-items: center;
+   justify-content: center;
+   position: relative;
 
+ }
+ .top-text {
+   background-color: black;
+   background-size: cover;
+   width: 1200px;
+ }
+/* center */
+.center {
+  position: relative;
+  top: 140px;
+  margin:0 auto;
+  width: 1000px;
+}
+.center h4 {
+  font-weight: bold;
+  line-height: 20px;
+  padding-top: 10px;
+  margin: 0 auto;
+}
+.container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+
+  flex-wrap: wrap;
+}
+.picture img {
+  height: 200px;
+  width: 300px;
+  margin: 10px 15px 10px 15px;
+}
+.picture {
+  margin-bottom: 20px;
+}
+/* Bottom section */
+.bottom {
+  background-image: url(file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-locations-background.jpg);
+  height: 550px;
+  width: 1200px;
+  background-size: cover;
+  top: 200px;
+  position: relative;
+justify-content: center;
+display: inline-flex;
+align-items: center;
+flex-direction: column;
+z-index: 2;
+}
+.bot-text {
+  background-color: black;
+  background-size: cover;
+  width: 300px;
+  height: 250px;
+margin: auto;
+margin: 15px 20px auto 20px;
+padding: 10px
+}
+
+.adresses {
+  align-items: center;
+  justify-content: center;
+  display: inline-flex;
+}
+/* bottom info */
+.bottom-info {
+  position: relative;
+  top: 200px;
+  margin:0 auto;
+  height: 200px;
+  top: 185px;
+}
+/* footer */
+footer {
+  text-align: left;
+margin-left: 20px;
+margin-top: 150px;
+}
